--- a/Support_Vector_Machine_cancer-example.ipynb
+++ b/Support_Vector_Machine_cancer-example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center><font size=\"5\"> SVM (Support Vector Machines)</font></h1>"
+    "# SVM (Support Vector Machines)"
    ]
   },
   {
